test-suite/typecheck/pass/function_call_arity.first
function add(a: Int, b: Int) -> Int { return a + b; }
function f() -> Int {
  return add(1, 2);
}
