test-suite/typecheck/fail/wrong_call_arg_type.first
function add(a: Int, b: Int) -> Int { return a + b; }
function f() -> Int {
  return add("x", 2);
}
